feat: Añadir documentación y guías operativas para agentes, junto con mejoras en la estructura del proyecto y correcciones de errores críticos
- Se creó el archivo AGENTS.md que proporciona una guía operativa para agentes en el proyecto Forevernote.
- Se añadió un changelog detallando las correcciones de errores y mejoras de UX.
- Se actualizaron los scripts de lanzamiento para incluir todos los módulos de JavaFX necesarios.
- Se realizaron mejoras en la configuración de Maven y se añadieron nuevas dependencias para el procesamiento de Markdown.
- Se eliminaron archivos innecesarios y se refactorizó el código para mejorar la mantenibilidad.